--- a/Theme/Royce/_includes/newsletter-box.html
+++ b/Theme/Royce/_includes/newsletter-box.html
@@ -1,7 +1,8 @@
-<section class="newsletter-box inner">
+<div>
+</div>
+<!-- <section class="newsletter-box inner">
     <h2 class="newsletter-box-title">Subscribe to {{ site.name }} newsletter</h2>
     <p>Get the latest and greatest from {{ site.name }} delivered straight to your inbox every week.</p>
-    <!-- Begin MailChimp Signup Form -->
     <div id="mc_embed_signup">
         <form action="{{ site.mailchimp_url }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
             class="validate gh-subscribe-form" target="_blank" novalidate>
@@ -10,5 +11,4 @@
             <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
         </form>
     </div>
-    <!--End mc_embed_signup-->
-</section><!-- .widget -->
+</section> -->
