--- a/Theme/Royce/_includes/postbox.html
+++ b/Theme/Royce/_includes/postbox.html
@@ -8,7 +8,7 @@
         </h2>
     </header><!-- .post-header -->
     <div class="post-content">
-        <p>{{ post.excerpt | strip_html | truncatewords:40 }} </p>
+        <!-- <p>{{ post.excerpt | strip_html | truncatewords:40 }} </p> -->
         <p class="post-tags">
             {% if post.tags.size > 0 %}
             {% for tag in post.tags %}
