--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -1,8 +1,8 @@
-
 <article class="post post-featured has-image">
     <div class="post-inside">
         {% if post.featured_image %}
-        <a href="{{ post.url | absolute_url }}" class="post-thumbnail"><img src="{{ post.featured_image | prepend: site.baseurl }}"
+        <a href="{{ post.url | absolute_url }}" class="post-thumbnail"><img
+                src="{{ site.baseurl }}{{ post.featured_image }}"
                 alt="{% if post.featured_image_alt %}{{ post.featured_image_alt }}{% else %}{{ post.title }}{% endif %}"></a>
         {% endif %}
         <header class="post-header">
@@ -17,9 +17,9 @@
                 {% if post.tags.size > 0 %}
                 {% for tag in post.tags %}
                 {% if forloop.index == post.tags.size %}
-                <a href='{{ site.baseurl }}/tag/{{ tag | downcase | replace: ' ', '-' }}/'>{{ tag | camelcase }}</a>
+                <a href='{{ site.baseurl }}/tag/{{ tag | downcase | replace: ' ', ' -' }}/'>{{ tag | camelcase }}</a>
                 {% else %}
-                <a href='{{ site.baseurl }}/tag/{{ tag | downcase | replace: ' ', '-' }}/'>{{ tag | camelcase }}</a>
+                <a href='{{ site.baseurl }}/tag/{{ tag | downcase | replace: ' ', ' -' }}/'>{{ tag | camelcase }}</a>
                 {% endif %}
                 {% endfor %}
                 {% endif %}
